# entativa-platforms

./: .gitignore  ARCHITECTURE.md  I.py  POST_SERVICES_SUMMARY.md  README.md  USER_SERVICES_SUMMARY.md  a.py  b.py  build-all.sh  c.py  d.py  e.py  entativa-algorithm.py  f.py  j.py  playpods-backend.py  x.py
entativa-algorithm/: .dockerignore  .gitignore  Dockerfile  PERFORMANCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
entativa-algorithm/api/: __init__.py  main.py
entativa-algorithm/configs/: development.yaml  local.yaml  production.yaml  staging.yaml
entativa-algorithm/docs/: ALGORITHMS.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  MONITORING.md  TESTING.md  TROUBLESHOOTING.md
entativa-algorithm/k8s/: namespace.yaml
entativa-algorithm/notebooks/: algorithm_benchmarking.ipynb  data_exploration.ipynb  engagement_analysis.ipynb  feature_analysis.ipynb  model_evaluation.ipynb  performance_optimization.ipynb  social_network_analysis.ipynb  trend_analysis.ipynb
entativa-algorithm/research/: __init__.py
entativa-algorithm/scripts/: benchmark.sh  build.sh  deploy.sh  test.sh  train.sh
entativa-algorithm/terraform/: eks.tf  elasticache.tf  elasticsearch.tf  iam.tf  main.tf  outputs.tf  providers.tf  rds.tf  s3.tf  variables.tf
entativa-algorithm/tests/: __init__.py  conftest.py
entativa-algorithm/workers/: __init__.py  analytics_worker.py  cache_refresh_worker.py  experiment_worker.py  feature_worker.py  ingestion_worker.py  recommendation_worker.py  (+3 more)
(+1103 files in other folders)
